restructure and cleanup, improve sim validators and collectors

--- a/RobotMbed/src/main/resources/calliope2017.properties
+++ b/RobotMbed/src/main/resources/calliope2017.properties
@@ -34,7 +34,7 @@ robot.descriptor=classpath:/mbed.yml
 robot.helperMethods=classpath:/calliope.methods.yml
 
 robot.plugin.worker.validate.and.collect=de.fhg.iais.roberta.worker.Calliope2017ValidatorAndCollectorWorker
-robot.plugin.worker.validate.sim=de.fhg.iais.roberta.worker.CalliopeSimValidatorWorker
+robot.plugin.worker.validate.and.collect.sim=de.fhg.iais.roberta.worker.CalliopeSimValidatorAndCollectorWorker
 robot.plugin.worker.generate=de.fhg.iais.roberta.worker.CalliopeCxxGeneratorWorker
 robot.plugin.worker.setup=de.fhg.iais.roberta.worker.CompilerSetupWorker
 robot.plugin.worker.compile=de.fhg.iais.roberta.worker.CalliopeCompilerWorker
@@ -46,7 +46,7 @@ robot.plugin.worker.transform.three2threeone=de.fhg.iais.roberta.worker.MbedThre
 robot.plugin.workflow.showsource = validate.and.collect,generate
 robot.plugin.workflow.compile = validate.and.collect,generate,setup,compile
 robot.plugin.workflow.run = validate.and.collect,generate,setup,compile
-#robot.plugin.workflow.getsimulationcode = validate.sim,collect.hardware,collect.method,generatesimulation
+robot.plugin.workflow.getsimulationcode = validate.and.collect.sim,generatesimulation
 robot.plugin.workflow.runnative = setup,compile
 robot.plugin.workflow.compilenative = setup,compile
 robot.plugin.workflow.reset=resetFirmware
