--- a/RobotMbed/src/main/resources/microbit.properties
+++ b/RobotMbed/src/main/resources/microbit.properties
@@ -32,8 +32,8 @@ robot.connection=autoConnection
 robot.descriptor=classpath:/mbed.yml
 robot.helperMethods=classpath:/common.methods.yml
 
-robot.plugin.worker.validate.and.collect=de.fhg.iais.roberta.worker.Calliope2017ValidatorAndCollectorWorker
-robot.plugin.worker.validate.sim=de.fhg.iais.roberta.worker.MicrobitSimValidatorWorker
+robot.plugin.worker.validate.and.collect=de.fhg.iais.roberta.worker.MicrobitValidatorAndCollectorWorker
+robot.plugin.worker.validate.and.collect.sim=de.fhg.iais.roberta.worker.MicrobitSimValidatorAndCollectorWorker
 robot.plugin.worker.generate=de.fhg.iais.roberta.worker.MicrobitPythonGeneratorWorker
 robot.plugin.worker.setup=de.fhg.iais.roberta.worker.CompilerSetupWorker
 robot.plugin.worker.compile=de.fhg.iais.roberta.worker.MicrobitCompilerWorker
@@ -45,7 +45,7 @@ robot.plugin.worker.transform.three2threeone=de.fhg.iais.roberta.worker.Three2Th
 robot.plugin.workflow.showsource = validate.and.collect,generate
 robot.plugin.workflow.compile = validate.and.collect,generate,setup,compile
 robot.plugin.workflow.run = validate.and.collect,generate,setup,compile
-#robot.plugin.workflow.getsimulationcode = validate.sim,collect.hardware,generatesimulation
+robot.plugin.workflow.getsimulationcode = validate.and.collect.sim,generatesimulation
 robot.plugin.workflow.runnative = setup,compile
 robot.plugin.workflow.compilenative = setup,compile
 robot.plugin.workflow.reset=resetFirmware
